crates/monitrs-tui/tests/snapshots/view_snapshots__following_a_build_scopes_the_table_to_it.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  up 3d 04:12 ---------------------------------------------------------------------------- 00:00:23Z --+|
|| CPU   79% [############################################################=---------------]  load  4.12 3.84 3.21  8 cpu  8 core  temp 62.5C||
|| MEM   71% [#####################################################=----------------------]  23G/32G  swap 205M/2.0G  bat 82%-              ||
|+ PROCESSES  sort CPU% desc  following 410 -------------------------------------------------------- 4 of 10 total, cpu >=107%, rss 479M ---+|
||      PID USER     S   CPU%  MEM%   RSS  VIRT  READ/s WRITE/s  THR      AGE NAME                     COMMAND                              ||
||>     411 gabor    S    96%  0.6%  212M  1.2G  1.7M/s  3.3M/s    4    01:23 cc                       cc -O2 -c parser.c                   ||
||      413 gabor    S   8.0%  0.1%   21M  126M  168K/s  336K/s    4    01:23 as                       as -o codegen.o                      ||
||      410 gabor    S   3.0%  0.1%   48M  288M  384K/s  768K/s    4    01:23 make                     make -j4                             ||
||      412 builder  S denied  0.6%  198M  1.2G  1.5M/s  3.1M/s    4    01:23 cc                       cc -O2 -c codegen.c                  ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
||                                                                                                                                          ||
|+------------------------------------------------------------------------------------------------------------------------------------------+|
| 1 Overview [2 Processes] 3 CPU  4 Storage  5 Network  6 Inspect  7 Battery                                                 / filter  ? help|
