crates/monitrs-tui/tests/snapshots/view_snapshots__permission_denied_metrics_on_the_inspect_screen.snap
---
source: crates/monitrs-tui/tests/view_snapshots.rs
expression: text
---
|+ monitrs  host:dev-mbp  [>LIVE]  1s  lag 1400ms  up 3d 04:12 ---------------------------------------------------------------- 00:00:23Z --+|
|| CPU !permission denied [...........................................................................]  load  4.12 3.84 3.21  8 cpu  8 core||
|| MEM   71% [##############################################################=-------------------------]  23G/32G  swap 205M/2.0G            ||
|+ SYSTEM ------------------------------------------ 22 of 23 lines ---+ DIAGNOSTICS -------------------------------------------------------+|
||  host         dev-mbp                                               |PRESSURE                                                            ||
||  os           fake-os 1.0                                           |? CPU     permission denied       denied                            ||
||  kernel       fake-kernel 1.0                                       |? NET     link speed unknown       18M/s                            ||
||  arch         aarch64                                               |? PSI-CPU warming up             warming                            ||
||  uptime       3d 04:12 (booted 00:00:00Z)                           |? PSI-MEM warming up             warming                            ||
||  cpu          8 logical, 8 physical                                 |? PSI-IO  warming up             warming                            ||
||  cpu model    Fake CPU at 3200 MHz                                  |UNAVAILABLE METRICS                                                 ||
||  memory       32 GiB total, swap 2.0 GiB                            |  ! process I/O             permission denied                       ||
||  semantics    cross-platform baseline; c...r-byte comparable with it|  - CPU time breakdown      unsupported                             ||
||  cgroup limit n/a                                                   |  - swap activity           unsupported                             ||
||  environment  no container/VM evidence (heuristic, high confidenc...|  - disk busy               unsupported                             ||
||COLLECTOR                                                            |  - network link speed      unsupported                             ||
||  fast         last 3ms p95 5ms max 11ms ok 24 failed 1              |  - temperatures            unsupported                             ||
||  medium       last 14ms p95 22ms max 31ms ok 5 failed 0             |  - battery                 unsupported                             ||
||  slow         not sampled yet                                       |  - Linux PSI               unsupported                             ||
||  on demand    not sampled yet                                       |  - cgroup limits           unsupported                             ||
||RENDER                                                               |  - process signals         unsupported                             ||
||  frames       1, 0 over budget                                      |  - renice                  unsupported                             ||
||  duration     last 4ms max 4ms p95 4ms of 16ms budget               |  some reads were refused; running with more privilege would prov...||
||  frame gap    n/a                                                   |STALE DATA                                                          ||
||OWN OVERHEAD                                                         |  every headline metric is fresh                                    ||
||  cpu          0.6% of one core, 23 MiB resident                     |COLLECTOR ERRORS                                                    ||
|+ SELECTED PROCESS --------------------------------- 9 of 12 lines ---|  ! /proc/diskstats: permission denied (x2, 00:02 ago)              ||
||  identity     31842 (start key 900100)                              |  ! hwmon: no sensors found (x1, 00:30 ago)                         ||
||  name         rustc                                                 |NOTICES                                                             ||
||  executable   /usr/bin/rustc                                        |  none                                                              ||
||  command      cargo build --release                                 |SAMPLING                                                            ||
||  state        sleeping                                              |  interval     1s                                                   ||
||  user         gabor                                                 |  dropped      2                                                    ||
||  cpu          120%                                                  |  coalesced    30                                                   ||
||  memory       2.6G rss, 16G virt, 8.1% of total                     |  lag          1400ms                                               ||
||  disk         !permission denied read, !permission denied write (...|  history      24 samples of 300, 162K                              ||
|+---------------------------------------------------------------------+--------------------------------------------------------------------+|
| 1 Overview  2 Processes  3 Storage  4 Network [5 Inspect]                                                                  / filter  ? help|
